deployment/api-DC.yml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "${CONTAINER}"
  namespace: "edge-deployment"
  labels:
    app: "${CONTAINER}"
spec:
  selector:
    matchLabels:
      app: "${CONTAINER}" 
  template: 
    metadata:
      labels:
        app: "${CONTAINER}"
    spec:
      containers:
        - name: "${CONTAINER}"
          image: "${REGISTRY}/${CONTAINER}:${CONTAINER_TAG}"
          ports:
            - containerPort: 5555
              protocol: "TCP"
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 512Mi
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/readiness
              port: 5555
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 20      
  replicas: 1
